@@ -10,7 +10,9 @@ import chart.desk.services.storage.StorageType;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
+import org.springframework.web.server.ResponseStatusException;
 
 import java.util.Collections;
 import java.util.List;
@@ -37,7 +39,7 @@ public class ChartService {
 
         List<String> urls = storageServices.stream()
                 .map(s -> s.save(chart, chartEntry.getName(), chartEntry.getVersion(), assetKind, userId))
-                .collect(Collectors.toList());
+                .toList();
         return chartRepository.save(new ChartModel(chartEntry, null, urls, Collections.emptyList(), userId));
     }
 
@@ -51,7 +53,6 @@ public class ChartService {
         return storageServices.stream()
                 .filter(s -> s.type() == StorageType.LOCAL)
                 .map(s -> s.get(name, version, assetKind, userId))
-                // TODO: error handling
-                .findFirst().orElseThrow(() -> new RuntimeException());
+                .findFirst().orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Chart not found: " + name + "-" + version));
     }
 }
